--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.4.0",
+    "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
     "cra-template-pwa": "2.0.0",
+    "postcss-loader": "^8.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.1.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   }
 }
