--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
     "cra-template-pwa": "2.0.0",
+    "i18next": "^25.2.1",
     "postcss-loader": "^8.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^5.0.1"
